Configure deployment and fix PDF service compilation